# airas-20251120-085252-matsuzawa

./: pyproject.toml
.github/workflows/: run_evaluation_with_claude_code.yml  run_full_experiment_with_claude_code_v2.yml
.research/: research_history.json
.research/iteration1/: stderr.txt  stdout.txt
config/: config.yaml
config/runs/: comparative-1-iter1-Qwen3-0.6B-gsm8k.yaml  proposed-iter1-Qwen3-0.6B-gsm8k.yaml
src/: evaluate.py  main.py  model.py  preprocess.py  train.py
